[metadata]
name = DCON
version = 1.0.0
author = Daniel Tschernutter
author_email = daniel.michael.tschernutter@alumni.ethz.ch
description = A package that allows to train single hidden layer neural networks for regression tasks using the DCON algorithm.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DanielTschernutter/DCON
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Operating System :: OS Independent

[options]
python_requires = >=3.8
install_requires =
    osqp>=0.6.2
    numpy>=1.23.5
    tensorflow>=2.10.0
    scikit-learn>=1.2.0
    scipy>=1.9.3